// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render TwoDataFieldListItem with one item from accounts 1`] = `
<Link
  className="list-item"
  to="/editAccount/1"
>
  <div>
    <h3
      className="list-item__title"
    >
      BoA
    </h3>
  </div>
  <h3
    className="list-item__data"
  >
    dog costs
  </h3>
</Link>
`;

exports[`should render TwoDataFieldListItem with one item from category 1`] = `
<Link
  className="list-item"
  to="/editCategory/1"
>
  <div>
    <h3
      className="list-item__title"
    >
      Dog
    </h3>
  </div>
  <h3
    className="list-item__data"
  >
    dog costs
  </h3>
</Link>
`;

exports[`should render TwoDataFieldListItem with one item from tags 1`] = `
<Link
  className="list-item"
  to="/editTag/1"
>
  <div>
    <h3
      className="list-item__title"
    >
      tax-deductible
    </h3>
  </div>
  <h3
    className="list-item__data"
  >
    tax docs
  </h3>
</Link>
`;
